# Coin-Smith

./: Cargo.toml  cli.sh  demo.md  grade.sh  nul  render.yaml  setup.sh  vercel.json  web.sh
.github/workflows/: classroom.yml
api/: api_build.rs  build.rs  health.rs
public/: index.html
src/: builder.rs  cli.rs  coinselect.rs  fees.rs  lib.rs  main.rs  psbt.rs  server.rs  types.rs  validate.rs
src/tests/: mod.rs
