[package]
name = "coin-smith"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "coin-smith"
path = "src/main.rs"

[dependencies]
bitcoin = { version = "0.31", features = ["serde", "base64"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
base64 = "0.21"
hex = "0.4"
anyhow = "1"
thiserror = "1"
